--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WalkGIS - Interactive Map Explorer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     
-    <!-- Google tag (gtag.js) - 請將 G-XXXXXXXXXX 替換為您的評估 ID -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBBS43BLSG"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      // 初始配置，禁用自動頁面瀏覽，我們將在 React 中手動控制以支援 SPA
       gtag('config', 'G-WBBS43BLSG', { send_page_view: false });
     </script>
 
     <style>
-      /* 核心地圖容器修正 */
       .leaflet-container {
         width: 100%;
         height: 100%;
@@ -28,7 +24,6 @@
         outline: none;
       }
       
-      /* 優化捲軸樣式 */
       ::-webkit-scrollbar {
         width: 8px;
         height: 8px;
@@ -44,7 +39,6 @@
         background: #cbd5e1;
       }
 
-      /* 自定義地圖 Popup 樣式優化 */
       .custom-popup .leaflet-popup-content-wrapper {
         border-radius: 1.5rem;
         padding: 0;
@@ -59,15 +53,17 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@19.0.0",
+    "react-markdown": "https://esm.sh/react-markdown@9.0.1?deps=react@19.0.0",
+    "remark-gfm": "https://esm.sh/remark-gfm@4.0.0",
+    "leaflet": "https://esm.sh/leaflet@1.9.4",
+    "react-leaflet": "https://esm.sh/react-leaflet@4.2.1?deps=react@19.0.0,react-dom@19.0.0,leaflet@1.9.4",
+    "sql.js": "https://esm.sh/sql.js@1.12.0?bundle",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
-    "remark-gfm": "https://esm.sh/remark-gfm@^4.0.0",
-    "leaflet": "https://esm.sh/leaflet@^1.9.4",
-    "react-leaflet": "https://esm.sh/react-leaflet@^5.0.0",
-    "sql.js": "https://esm.sh/sql.js@^1.13.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
